--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -43,6 +43,9 @@
         font-size: 16px;
         font-weight: 500;
         color: #fff;
+        br{
+            display: none;
+        }
         a{
             color: #fff;
             text-decoration: underline;
