--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -13,4 +13,13 @@
         width: 300px;
         height: 50px;
     }
+    &_feed{
+        width: 100%;
+        height: 55px;
+    }
+    &_product{
+        width: 131px;
+        height: 40px;
+        font-size: 14px;
+    }
 }
