--- a/src/sass/blocks/_titles.scss
+++ b/src/sass/blocks/_titles.scss
@@ -3,4 +3,12 @@
     font-weight: 700;
     text-align: center;
     color: #0d0d0d;
+    text-transform: uppercase;
+    margin-bottom: 0;
+    &_left{
+        font-size: 36px;
+        font-weight: 700;
+        text-align: left;
+        color: #fff;
+    }
 }
