--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -11,4 +11,10 @@
 @import 'blocks/buttons';
 @import 'blocks/titles';
 @import 'blocks/benefits';
+@import 'blocks/consultation';
+@import 'blocks/forms';
+@import 'blocks/carousel';
+@import 'blocks/catalog';
+@import 'blocks/feedback';
+
 @import 'base/media';
