--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,6 +1,8 @@
 @import 'base/variables';
+@import 'base/animations';
 * {
     font-family: 'Museo Sans Cyrl', sans-serif;
+    scroll-behavior: smooth;
 }
 .container {
     max-width: 950px;
@@ -16,5 +18,8 @@
 @import 'blocks/carousel';
 @import 'blocks/catalog';
 @import 'blocks/feedback';
+@import 'blocks/footer';
+@import 'blocks/modal';
+@import 'blocks/pageup';
 
 @import 'base/media';
