--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -1,3 +1,11 @@
+@media (max-width: 1200px){
+    .footer{
+        &__info{
+            bottom: 0;
+            top: auto;
+        }
+    }
+}
 @media (max-width: 992px){
     .carousel{
         &__inner{
@@ -142,6 +150,15 @@
             }
         }
     }
+    .footer{
+        &__info{
+            width: 360px;
+            height: 200px;
+        }
+        &__addr{
+            margin-top: 25px;
+        }
+    }
 }
 @media (max-width: 575px){
     .promo{    
@@ -279,6 +296,9 @@
             }
             &__list{
                 padding-right: 0px;
+                &_active{
+                    transform: translateX(-105%);
+                }
                 li{
                     font-size: 10px;
                     margin-bottom: 5px;
@@ -292,7 +312,7 @@
                 position: absolute;
                 bottom: 0;
                 left:50%;
-                transform: translateX(-80%);
+                transform: translateX(-55%);
                 font-size: 12px;
             }
             &__footer{
@@ -336,5 +356,48 @@
                 text-align: justify;
             }
         }
+    }
+    .footer{
+        height: 400px;
+        iframe{
+            height: 400px;
+        }
+        &__info{
+            width: 320px;
+            height: 130px;
+        }
+        &__addr{
+            margin-top: 10px;
+            line-height: 16px;
+            font-size: 16px;
+        }
+        &__phone{
+            margin-top: 15px;
+            font-size: 18px;
+            line-height: 18px;
+        }
+        &__socials{
+            margin-top: 20px;
+        }
+        &__social{
+            width: 40px;
+            height: 40px;
+        }
+    }
+    .modal{
+        width: 280px;
+        transform: translate(-53%, -50%);
+        padding: 20px 25px 35px 25px;
+        &__close{
+            right: -23px;
+        }
+    }
+    .feed-form_mt25{
+        width: 240px;
+        margin-top: 10px;
+    }
+    .pageup{
+        bottom: 30px;
+        right: 20px;
     }
 }
