--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -132,10 +132,13 @@
             transition: 0.5s all;
             padding-left: 19px;
             margin-bottom: 0;
-            list-style-type: none;
             &_active{
                 transform: translateX(-100%);
                 margin-left: 0px;
+            }
+            ul{
+                padding-left: 5px;
+                list-style-type: none;
             }
             li{
                 position: relative;
