--- a/src/sass/blocks/_consultation.scss
+++ b/src/sass/blocks/_consultation.scss
@@ -9,4 +9,14 @@
         text-align: left;
         color: #fff;
     }
+    .error{
+        border: 1px solid red;
+    }
+    label.error{
+        color: #fff;
+        border: none;
+        text-align: center;
+        font-size: 12px;
+        margin-bottom: 15px;
+    }
 }
